syntax="proto3";

package kettles;

service Kettles {
    rpc GetAllKettles (GetAllKettlesParams) returns (KettlesResponse) {}
    rpc addKettle (createKettleDto) returns (Kettle) {}
}

message GetAllKettlesParams {}

message Kettle {
    int32 id = 1;
    int32 count = 2;
    string createdAt = 3;
    string updatedAt = 4;
}

message createKettleDto {
    int32 count = 1;
}

message KettlesResponse {
    int32 allCount = 1;
    repeated Kettle kettles = 2;
}